# i-am-not-an-agent-browsing-extension

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN-rich-commands.md  README.md  pyproject.toml
extension/: background.js  content.js  manifest.json  rules.json  stealth.js
src/browser_relay/: __init__.py  chrome.py
src/browser_relay/cli/: app.py
src/browser_relay/relay/: server.py
tests/: test_chrome.py  test_cli.py  test_relay.py  test_rich_commands.py  test_stealth.py
