[project]
name = "browser-relay"
version = "0.1.0"
description = "Undetectable LLM-orchestrated browser automation via Chrome extension relay"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "typer>=0.15.0",
    "httpx>=0.27.0",
]

[project.scripts]
browser-relay = "browser_relay.cli.app:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_relay"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-httpx>=0.30.0"]
